# financial-app

./: .gitignore  Cargo.toml  README.md
docs/: ARHITECTURE.md  DECISION.md
src/: main.rs
src/db/: alert_repository.rs  budget_repository.rs  connection.rs  mod.rs  repository.rs  rule_repository.rs
src/models/: alert.rs  budget.rs  mod.rs  rule.rs  transaction.rs
src/operations/: add.rs  browse.rs  budget.rs  import.rs  mod.rs  remove.rs  report.rs  search_by_category.rs
tests/: README.md  data.csv
