[package]
name = "financial-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fino"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
rust_decimal = "1.39.0"
uuid = { version = "1", features = ["v4"] }
csv = "1.4.0"
tempfile = "3.23.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
quick-xml = "0.38.4"
regex = "1.12.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.5.56", features = ["derive"] }
